@@ -13,6 +13,7 @@
  */
 package org.onebusaway.collections;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.Collection;
 import java.util.Comparator;
@@ -36,7 +37,7 @@ import java.util.SortedMap;
  */
 public class FactoryMap<K, V> extends HashMap<K, V> {
 
-  private static final long serialVersionUID = 1L;
+  @Serial private static final long serialVersionUID = 1L;
 
   private IValueFactory<K, V> _valueFactory;
 
@@ -60,7 +61,7 @@ public class FactoryMap<K, V> extends HashMap<K, V> {
    * @return a {@link Map} with factory-map behavior
    */
   public static <K, V> Map<K, V> create(Map<K, V> map, V defaultValue) {
-    return new MapImpl<K, V>(map, new ClassInstanceFactory<K, V>(defaultValue.getClass()));
+    return new MapImpl<>(map, new ClassInstanceFactory<K, V>(defaultValue.getClass()));
   }
 
   /**
@@ -72,7 +73,7 @@ public class FactoryMap<K, V> extends HashMap<K, V> {
    * @return a {@link Map} with factory-map behavior
    */
   public static <K, V> Map<K, V> create(Map<K, V> map, IValueFactory<K, V> factory) {
-    return new MapImpl<K, V>(map, factory);
+    return new MapImpl<>(map, factory);
   }
 
   /**
@@ -85,7 +86,7 @@ public class FactoryMap<K, V> extends HashMap<K, V> {
    * @return a {@link SortedMap} with factory-map behavior
    */
   public static <K, V> SortedMap<K, V> createSorted(SortedMap<K, V> map, V defaultValue) {
-    return new SortedMapImpl<K, V>(map, new ClassInstanceFactory<K, V>(defaultValue.getClass()));
+    return new SortedMapImpl<>(map, new ClassInstanceFactory<K, V>(defaultValue.getClass()));
   }
 
   /**
@@ -98,7 +99,7 @@ public class FactoryMap<K, V> extends HashMap<K, V> {
    */
   public static <K, V> SortedMap<K, V> createSorted(
       SortedMap<K, V> map, IValueFactory<K, V> factory) {
-    return new SortedMapImpl<K, V>(map, factory);
+    return new SortedMapImpl<>(map, factory);
   }
 
   /**
@@ -148,7 +149,7 @@ public class FactoryMap<K, V> extends HashMap<K, V> {
 
   private static class ClassInstanceFactory<K, V> implements IValueFactory<K, V>, Serializable {
 
-    private static final long serialVersionUID = 1L;
+    @Serial private static final long serialVersionUID = 1L;
 
     private Class<? extends V> _valueClass;
 
@@ -159,7 +160,7 @@ public class FactoryMap<K, V> extends HashMap<K, V> {
 
     public V create(K key) {
       try {
-        return _valueClass.newInstance();
+        return _valueClass.getDeclaredConstructor().newInstance();
       } catch (Exception e) {
         throw new IllegalStateException(e);
       }
@@ -168,7 +169,7 @@ public class FactoryMap<K, V> extends HashMap<K, V> {
 
   private static class MapImpl<K, V> implements Map<K, V>, Serializable {
 
-    private static final long serialVersionUID = 1L;
+    @Serial private static final long serialVersionUID = 1L;
 
     private Map<K, V> _source;
 
@@ -236,7 +237,7 @@ public class FactoryMap<K, V> extends HashMap<K, V> {
 
   private static class SortedMapImpl<K, V> extends MapImpl<K, V> implements SortedMap<K, V> {
 
-    private static final long serialVersionUID = 1L;
+    @Serial private static final long serialVersionUID = 1L;
 
     private SortedMap<K, V> _source;
 
