@@ -165,9 +165,9 @@ public class StopMatrixFareModificationStrategy implements GtfsTransformStrategy
 
     private List<String> stopIds;
 
-    private Map<Float, FareAttribute> newFareAttributes = new HashMap<Float, FareAttribute>();
+    private Map<Float, FareAttribute> newFareAttributes = new HashMap<>();
 
-    private Map<Pair<String>, FareRule> newFareRules = new HashMap<Pair<String>, FareRule>();
+    private Map<Pair<String>, FareRule> newFareRules = new HashMap<>();
 
     int fareId = initialFareId;
 
@@ -179,7 +179,7 @@ public class StopMatrixFareModificationStrategy implements GtfsTransformStrategy
         stopIds = list;
         return;
       }
-      String orig = list.get(0);
+      String orig = list.getFirst();
       for (int i = 1; i < list.size(); i++) {
         String dest = stopIds.get(i);
         if (!orig.equals(dest)) {
